Ajustes sobre la app para la funcionalidad completa

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jpareja.campusmovil" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -42,6 +42,10 @@
         <activity
             android:name=".ReasignarActivity"
             android:label="@string/title_activity_reasignar" >
+        </activity>
+        <activity
+            android:name=".NotasMateriaActivity"
+            android:label="@string/title_activity_notas_materia" >
         </activity>
     </application>
 
